examples/neg/object/obj_unbound_block.effekt
effect Eff(a: Int) {f: Int => Int} {g: Int => Int}: Int

def impl: Eff = new Eff { (a: Int) =>
    <>
}

def main() = impl.Eff(1) {x => x} {x => x}